<resources>
    <string name="app_name">IliasApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="module_search">Modul Suche</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings auf der Startseite -->
    <string name="vorlesungskalender">Vorlesungskalender</string>
    <string name="raumplan">Raumplan</string>
    <string name="meine_veranstaltungen">Meine Veranstaltungen</string>
    <string name="veranstaltungsplan">Veranstaltungsplan</string>
    <string name="campus_app">Campus App</string>
    <string name="veranstaltungs_details">Veranstaltungsdetails</string>
    <string name="maps_anzeigen">Maps anzeigen</string>
    <string name="room_search">Raum suchen</string>
    <string name="search">Suche</string>
    <string name="raumdetails">Raumdetails</string>
    <string name="raum_suche">Raumsuche</string>
    <string name="raum_details">Raumdetails</string>
    <string name="mo">Mo</string>
    <string name="di">Di</string>
    <string name="mi">Mi</string>
    <string name="doo">Do</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="so">So</string>
    />
</resources>