<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.HomeScreen">

    <Button
        android:id="@+id/button_Raumplan"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:onClick="buttonRaumplan"
        android:text="@string/raumplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <Button
        android:id="@+id/button_Mensa"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:onClick="buttonmMensa"
        android:text="Mensa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/button_Vorlesungskalender"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:onClick="buttonmKalender"
        android:text="@string/vorlesungskalender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/button_mVeranstaltungen"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:onClick="buttonmVeranstaltungen"
        android:text="@string/meine_veranstaltungen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/button_Veranstaltungsplan"
        android:layout_width="361dp"
        android:layout_height="61dp"
        android:backgroundTint="#3F51B5"
        android:onClick="buttonVeranstaltungsplan"
        android:text="@string/veranstaltungsplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/CampusApp"
        android:layout_width="249dp"
        android:layout_height="52dp"
        android:text="@string/campus_app"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="364dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/unilogo" />
</androidx.constraintlayout.widget.ConstraintLayout>