<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Kalender">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/kalender_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_column="0"
            app:layout_row="0" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="41dp"
            android:text="@string/mo"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="@string/di"
            app:layout_column="2"
            app:layout_row="0" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="@string/mi"
            app:layout_column="3"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/doo"
            app:layout_column="4"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:text="@string/fr"
            app:layout_column="5"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/sa"
            app:layout_column="6"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:text="@string/so"
            app:layout_column="7"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView8.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8:00"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView9.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9:00"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView10.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:00"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView11.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:00"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/textView12.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:00"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            android:id="@+id/textView13.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13:00"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/textView14.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="14:00"
            app:layout_column="0"
            app:layout_row="7" />

        <TextView
            android:id="@+id/textView15.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15:00"
            app:layout_column="0"
            app:layout_row="8" />

        <TextView
            android:id="@+id/textView16.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16:00"
            app:layout_column="0"
            app:layout_row="9" />

        <TextView
            android:id="@+id/textView17.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17:00"
            app:layout_column="0"
            app:layout_row="10" />

        <TextView
            android:id="@+id/textView18.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="18:00"
            app:layout_column="0"
            app:layout_row="11" />

        <TextView
            android:id="@+id/textView19.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="19:00"
            app:layout_column="0"
            app:layout_row="12" />

        <TextView
            android:id="@+id/textView20.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20:00"
            app:layout_column="0"
            app:layout_row="13" />

        <TextView
            android:id="@+id/textView21.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="21:00"
            app:layout_column="0"
            app:layout_row="14" />

        <TextView
            android:id="@+id/textView22.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22:00"
            app:layout_column="0"
            app:layout_row="15" />


    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>